# rsh

./: Cargo.toml  README.md
command/: Cargo.toml
main/: Cargo.toml
main/src/: lib.rs  main.rs
src/: main.rs
src/lib/: lib.rs
src/lib/command/: mod.rs
src/lib/command/builtins/: cd.rs  exit.rs  mod.rs
src/lib/command/evalerror/: mod.rs
src/lib/parser/: mod.rs
src/lib/prompt/: mod.rs
